--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <!-- NavBar -->
-    <nav class="mx-auto  pt-2 pb-2 border-2 shadow-lg">
+    <nav class="mx-auto navbar-center pt-2 pb-2 border-2 shadow-lg">
       <!-- Flex container -->
       <div class="flex items-center justify-between">
         <!-- Brand logo -->
@@ -42,40 +42,40 @@
         class="flex flex-col p-5 md:flex-row items-center text-lightGray  justify-between lg:ml-5 mt-10 space-y-0 md:space-y-0"
       >
       <div class="flex flex-col mb-6 space-y-6 md:w-1/2">
-        <p class=" font-sans text-center md:text-left sm:text-xl sm:text-center">- Coming soon</p>
+        <p class=" font-heading text-center md:text-left sm:text-xl sm:text-center">- Coming soon</p>
         <h3 class="font-heading text-center md:text-4xl md:text-left sm:text-5xl sm:text-center">Get Notified <br>
           When we launch</h3>
 
           <span>
-            <input type="text" placeholder="Enter your email address" class="input px-5 rounded-full mx-3"/>
-          <button type="submit" class=" btn bg-lightBlue text-lightAsh rounded-full px-5 sm:items-center z-2 ">Notify me</button>
+            <input type="text" placeholder="Enter your email address" class="h-12 w-72 sm:mb-1 input outline-none border border-lightBlue px-5 rounded-full"/>
+            <button type="submit" class="h-8 w-32 btn bg-lightBlue text-lightAsh rounded-full px-6 hover:bg-blue-500 sm:items-center sm:w-21">Notify me</button>
           </span>
 
-          <p class="font-sans text-center md:text-left md:text-sm sm:text- sm:text-center"> Don’t worry we will not spam you</p>
+          <p class="font-sans text-center md:text-left md:text-sm sm:text-xl sm:text-center"> Don’t worry we will not spam you</p>
       </div>
       <div class="md:w-1/2">
         <div class="grid grid-flow-col gap-6 text-center auto-cols-max">
           <div class="flex flex-col lg:p-11 md:p-4 bg-countPink rounded-box text-neutral-content sm:p-6 ">
-            <span class="countdown font-heading md:text-md text-4xl">
-              <span style="--value:15;"></span>
+            <span class="font-heading md:text-md text-4xl">
+              <span id="days"></span>
             </span>
             days
           </div> 
           <div class="flex flex-col lg:p-11 md:p-4 bg-countPink rounded-box text-neutral-content sm:p-6 ">
-            <span class="countdown font-heading md:text-md text-4xl">
-              <span style="--value:10;"></span>
+            <span class="font-heading md:text-md text-4xl">
+              <span id="hours"></span>
             </span>
             hours
           </div> 
           <div class="flex flex-col lg:p-11 md:p-4 bg-countPink rounded-box text-neutral-content sm:p-6 ">
-            <span class="countdown font-heading md:text-md text-4xl">
-              <span style="--value:24;"></span>
+            <span class="font-heading md:text-md text-4xl">
+              <span id="min"></span>
             </span>
             min
           </div> 
           <div class="flex flex-col lg:p-11 md:p-4 bg-countPink rounded-box text-neutral-content sm:p-6 ">
-            <span class="countdown font-heading md:text-md text-4xl">
-              <span style="--value:55;"></span>
+            <span class="font-heading md:text-md text-4xl">
+              <span id="secs"></span>
             </span>
             sec
           </div>
@@ -215,19 +215,18 @@
           <div class="flex flex-col mt-24 md:flex-row md:space-x-6">
             <!-- Testimonial 1 -->
             <div
-              class="flex flex-col p-6 mb-8 space-y-6 rounded-lg bg-gray-50 md:w-1/3"
+              class="flex flex-col mt-11 p-6 space-y-9 rounded-lg bg-gray-50 md:w-1/3 "
             >
-              <h3 class="text-lg font-heading font-bold md:text-left">
+              <h3 class="text-lg font-Headings font-bold md:text-left">
                 I wonder how i had survived without Kartlog
               </h3>
-              <p class="text--sm text-lightGray">
+              <p class="text-sm font-Paragraph text-lightGray">
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe,
                 sapiente libero consectetur explicabo molestiae modi est illum
-                quisquam. Saepe consequuntur facilis deserunt quas porro, et quo
-                aspernatur ducimus doloremque obcaecati.
+                quisquam.
               </p>
-              <div class="space-y-0 text-left">
-                <h5 class="text-md font-semibold">Sophia Moore</h5>
+              <div class="text-left">
+                <h5 class="text-md font-TextSingle font-semibold">Sophia Moore</h5>
                 <p class="text-sm text-lightGray">CEO at Kreative Agency</p>
                 <img src="img/Mask Group-1.png" alt="" class="w-14" />
               </div>
@@ -235,18 +234,17 @@
 
             <!-- Testimonial 2 -->
             <div
-              class="hidden flex-col p-6 mb-8 space-y-6 rounded-lg bg-gray-50 md:flex md:w-1/3"
+              class=" flex-col p-6 lg:mb-8 lg:mt-0 sm:mt-11 space-y-10 rounded-lg bg-gray-50 md:flex md:w-1/3"
             >
-              <h3 class="text-lg font-heading font-bold md:text-left">
+              <h3 class="text-lg font-Headings font-bold md:text-left">
                 Kartlog is all i need to be top of my game
               </h3>
-              <p class="text--sm text-lightGray">
+              <p class="text-sm font-Paragraph text-lightGray">
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe,
                 sapiente libero consectetur explicabo molestiae modi est illum
-                quisquam. Saepe consequuntur facilis deserunt quas porro, et quo
-                aspernatur ducimus doloremque obcaecati.
+                quisquam.
               </p>
-              <div class="space-y-0 text-left">
+              <div class="text-left">
                 <h5 class="text-md font-semibold">Adam Smith</h5>
                 <p class="text-sm text-lightGray">Fashion Designer</p>
                 <img src="img/Mask Group.png" alt="" class="w-14" />
@@ -255,20 +253,19 @@
 
             <!-- Testimonial 3 -->
             <div
-              class="hidden flex-col p-6 mb-8 space-y-6 rounded-lg bg-gray-50 md:flex md:w-1/3"
+              class="flex-col p-6 mt-11 space-y-9 rounded-lg bg-gray-50 md:flex md:w-1/3"
             >
-              <h3 class="text-lg font-heading font-bold md:text-left">
+              <h3 class="text-lg font-Headings font-bold md:text-left">
                 If you want to succeed, use Kartlog
               </h3>
-              <p class="text--sm text-lightGray">
+              <p class="text-sm font-Paragraph text-lightGray">
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe,
                 sapiente libero consectetur explicabo molestiae modi est illum
-                quisquam. Saepe consequuntur facilis deserunt quas porro, et quo
-                aspernatur ducimus doloremque obcaecati.
+                quisquam.
               </p>
-              <div class="space-y-0 mb-8 text-left">
+              <div class="text-left">
                 <h5 class="text-md font-semibold">Mike Warren</h5>
-                <p class="text-sm text-lightGray">Designer at Drells Fashion</p>
+                <p class="text-sm font-card text-lightGray">Designer at Drells Fashion</p>
                 <img src="img/Mask Group-2.png" alt="" class="w-14" />
               </div>
             </div>
@@ -283,5 +280,7 @@
      
       </div>
     </footer>
+
+    <script src="./js/count.js"></script>
   </body>
 </html>
