--- a/index.html
+++ b/index.html
@@ -55,25 +55,25 @@
       </div>
       <div class="md:w-1/2">
         <div class="grid grid-flow-col gap-6 text-center auto-cols-max">
-          <div class="flex flex-col lg:p-11 md:p-4 bg-countPink rounded-box text-neutral-content sm:p-6 ">
+          <div class="flex flex-col lg:px-8 md:p-4 bg-countPink rounded-box text-neutral-content sm:p-6 ">
             <span class="font-heading md:text-md text-4xl">
               <span id="days"></span>
             </span>
             days
           </div> 
-          <div class="flex flex-col lg:p-11 md:p-4 bg-countPink rounded-box text-neutral-content sm:p-6 ">
+          <div class="flex flex-col lg:px-8 md:p-4 bg-countPink rounded-box text-neutral-content sm:p-6 ">
             <span class="font-heading md:text-md text-4xl">
               <span id="hours"></span>
             </span>
             hours
           </div> 
-          <div class="flex flex-col lg:p-11 md:p-4 bg-countPink rounded-box text-neutral-content sm:p-6 ">
+          <div class="flex flex-col lg:px-8 md:p-4 bg-countPink rounded-box text-neutral-content sm:p-6 ">
             <span class="font-heading md:text-md text-4xl">
               <span id="min"></span>
             </span>
             min
           </div> 
-          <div class="flex flex-col lg:p-11 md:p-4 bg-countPink rounded-box text-neutral-content sm:p-6 ">
+          <div class="flex flex-col lg:px-8 md:p-4 bg-countPink rounded-box text-neutral-content sm:p-6 ">
             <span class="font-heading md:text-md text-4xl">
               <span id="secs"></span>
             </span>
@@ -215,7 +215,7 @@
           <div class="flex flex-col mt-24 md:flex-row md:space-x-6">
             <!-- Testimonial 1 -->
             <div
-              class="flex flex-col mt-11 p-6 space-y-9 rounded-lg bg-gray-50 md:w-1/3 "
+              class="flex flex-col mt-11 p-6 sm:mb-5 space-y-9 rounded-lg bg-gray-50 md:w-1/3 "
             >
               <h3 class="text-lg font-Headings font-bold md:text-left">
                 I wonder how i had survived without Kartlog
