--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </span>
             min
           </div> 
-          <div class="flex flex-col lg:px-8 md:p-4 bg-countPink rounded-box text-neutral-content sm:p-6 ">
+          <div class="flex flex-col lg:px-8  lg:pr-4 md:p-4 bg-countPink rounded-box text-neutral-content sm:p-6 ">
             <span class="font-heading md:text-md text-4xl">
               <span id="secs"></span>
             </span>
