--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
           <p class="font-sans text-center md:text-left md:text-sm sm:text-xl sm:text-center"> Don’t worry we will not spam you</p>
       </div>
-      <div class="md:w-1/2">
+      <div class="md:w-1/2 lg:pr-6">
         <div class="grid grid-flow-col gap-6 text-center auto-cols-max">
           <div class="flex flex-col lg:px-8 md:p-4 bg-countPink rounded-box text-neutral-content sm:p-6 ">
             <span class="font-heading md:text-md text-4xl">
@@ -73,7 +73,7 @@
             </span>
             min
           </div> 
-          <div class="flex flex-col lg:px-8  lg:pr-4 md:p-4 bg-countPink rounded-box text-neutral-content sm:p-6 ">
+          <div class="flex flex-col lg:px-8  md:p-4 bg-countPink rounded-box text-neutral-content sm:p-6 ">
             <span class="font-heading md:text-md text-4xl">
               <span id="secs"></span>
             </span>
