created the hamburger menu

--- a/index.html
+++ b/index.html
@@ -52,13 +52,46 @@
 
                 <!-- Mobile Menu -->
                 <div class="md:hidden">
-                   <div id="menu" class="absolute flex-col items-center self-end hidden 
-                   py-8 mt-10 space-y-6 font-bold bg-white sm:w-auto 
-                   left-6 right-6 drop-shadow-md">
-                   <div class="pt-2 mx-auto">
+                   <div id="menu" class="absolute flex-col hidden self-end  
+                   py-8  mt-2.5 space-y-6 font-bold bg-white sm:w-auto sm:self-center
+                   left-0 right-0 drop-shadow-xl space-x-10">
+                   <span class="flex mx-auto">
                     <img src="img/google.svg" width="" alt="google-badge" />
                     <img src="img/apple.svg" width="38%" alt="apple-badge" />
-                </div>
+                   </span>
+                   <hr>
+
+                    <div class="space-y-4">
+                       <span class=" mx-auto">
+                           <h3 class="text-lightBlue font-heading">Why Kartlog</h3>
+                       </span>
+                     <span class="flex flex-col mx-auto space-y-4">
+                           <a class="text-darkBlack font-light hover:text-lightBlue">Designers</a>
+                           <a class="text-darkBlack font-light hover:text-lightBlue">Customers</a>
+                     </span>
+                    </div>
+
+                    <div class="space-y-4 absolute right-20 top-28">
+                        <span class="mx-auto">
+                            <h3 class="text-lightBlue font-heading">Support</h3>
+                        </span>
+                        <span class="flex flex-col mx-auto space-y-4">
+                        <a class="text-darkBlack font-light hover:text-lightBlue">Help Center</a>
+                        <a class="text-darkBlack font-light hover:text-lightBlue">Contact Us</a>
+                       </span>
+                    </div>
+
+                    <div class="space-y-4">   
+                       <span class="mx-auto">
+                              <h3 class="text-lightBlue font-heading">Company</h3>
+                     </span>
+                     <span class="flex flex-col mx-auto space-y-4">
+                          <a class="text-darkBlack font-light hover:text-lightBlue">About</a>
+                          <a class="text-darkBlack font-light hover:text-lightBlue">Blog</a>
+                          <a class="text-darkBlack font-light hover:text-lightBlue">Press</a>
+                          <a class="text-darkBlack font-light hover:text-lightBlue">Career</a>
+                         </span>
+                      </div>
 
                 </div>
                 </div>
@@ -471,5 +504,6 @@
         </footer>
 
         <script src="./js/count.js"></script>
+        <script src="./js/script.js"></script>
     </body>
 </html>
